# newbxai

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  bitrix24_client.py  bitrix_assistant.py  insert_shortcut_log.py  inspect_build_tool.py  memory_utils.py  pyproject.toml  replace_build_tool.py  requirements-dev.txt  requirements.txt  run_agent.py  run_bot.py  run_build_catalog.py  run_telegram_bot.py  telegram_bot.py  tmp_block.txt  update_build_agent.py  update_invoke_block.py  update_session.py
bitrix_agent/: __init__.py  __main__.py  _compat_requests.py  agent.py  client.py  config.py  environment.py  io.py  launcher.py  memory.py  normalizer.py  planner.py  telegram_bot.py  tools.py
docs/: README.md  performance_report.md
langchain_core/: __init__.py  messages.py
langgraph/: __init__.py  graph.py
schemas/: batch.json  crm.contact.list.json  crm.deal.add.json  index.json  user.current.json  user.get.json
scripts/: build_catalog.py
spec/: 00_constitution.md  01_agent_architecture.md  02_bitrix_methods.md  03_security_and_rollout.md  04_state_and_memory.md  05_tasks.md  06_todo.md
src/: main_entrypoint.py
telegram_bitrix_agent/: config.py  logging.py  main.py
tests/: conftest.py  test_adaptive_executor.py  test_bitrix_tools.py  test_config.py  test_confirmation_detection.py  test_context_builder.py  test_dialog_snapshots.py  test_formatter.py  test_http_api.py  test_load.py  test_logging.py  test_model_client.py  test_orchestrator.py  test_planner_tools.py  test_telegram_bot.py  test_telegram_runner.py
tools/: load_test.py
(+43 files in other folders)
