[project]
name = "bitrix-autonomous-agent"
version = "1.0.0"
description = "Автономный агент Bitrix24, работающий через входящий вебхук"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "python-telegram-bot>=21.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
